third_party/WebKit/WebCore/platform/text/TextEncoding.h
@@ -1,6 +1,6 @@
 FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 /*
- * Copyright (C) 2004, 2006 Apple Computer, Inc.  All rights reserved.
+ * Copyright (C) 2004, 2006, 2007, 2008, 2009 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -46,12 +46,14 @@ namespace WebCore {
         bool usesVisualOrdering() const;
         bool isJapanese() const;
         
-        PassRefPtr<StringImpl> displayString(PassRefPtr<StringImpl> str) const {
+        PassRefPtr<StringImpl> displayString(PassRefPtr<StringImpl> str) const
+        {
             if (m_backslashAsCurrencySymbol == '\\' || !str)
                 return str;
             return str->replace('\\', m_backslashAsCurrencySymbol);
         }
-        void displayBuffer(UChar* characters, unsigned len) const {
+        void displayBuffer(UChar* characters, unsigned len) const
+        {
             if (m_backslashAsCurrencySymbol == '\\')
                 return;
             for (unsigned i = 0; i < len; ++i) {
@@ -73,10 +75,11 @@ namespace WebCore {
 
     private:
         UChar backslashAsCurrencySymbol() const;
+        bool isNonByteBasedEncoding() const;
+        bool isUTF7Encoding() const;
 
         const char* m_name;
         UChar m_backslashAsCurrencySymbol;
-        bool isNonByteBasedEncoding() const;
     };
 
     inline bool operator==(const TextEncoding& a, const TextEncoding& b) { return a.name() == b.name(); }
